@@ -2,7 +2,6 @@ import os
 import re
 import json
 
-from functools import partial
 from resources.lib.ui.BrowserBase import BrowserBase
 from resources.lib.ui import source_utils, control, client
 
@@ -10,43 +9,52 @@ PATH = control.getSetting('folder.location')
 
 
 class Sources(BrowserBase):
-    def get_sources(self, query, mal_id, episode):
+    def __init__(self):
+        self.local_files = []
+
+    def get_sources(self, query, mal_id, episode, season):
         filenames = []
         for root, dirs, files in os.walk(PATH):
             for file in files:
                 if source_utils.is_file_ext_valid(file):
-                    filenames.append(str(os.path.join(root, file).replace(PATH, '')))
+                    full_path = os.path.join(root, file)
+                    filenames.append({
+                        'name': file,
+                        'path': full_path
+                    })
 
-        clean_filenames = [re.sub(r'\[.*?]\s*', '', os.path.basename(i).replace(',', '')) for i in filenames]
+        filenames = source_utils.filter_sources('local', filenames, season, episode)
+        clean_filenames = [re.sub(r'\[.*?]\s*', '', i['name'].replace(',', '')) for i in filenames]
         filenames_query = ','.join(clean_filenames)
         response = client.request('https://armkai.vercel.app/api/fuzzypacks', params={"dict": filenames_query, "match": query})
         resp = json.loads(response) if response else []
-        match_files = []
-        for i in resp:
-            if episode not in clean_filenames[i]:
-                continue
-            match_files.append(filenames[i])
-        mapfunc = partial(self.process_local_search, episode=episode)
-        all_results = list(map(mapfunc, match_files))
-        return all_results
+        match_files = [filenames[i] for i in resp]
 
-    @staticmethod
-    def process_local_search(f, episode):
-        full_path = os.path.join(PATH, f)
-        source = {
-            'release_title': os.path.basename(f),
-            'hash': os.path.join(PATH, f),
-            'provider': 'Local',
-            'type': 'local',
-            'quality': source_utils.getQuality(f),
-            'debrid_provider': 'Local-Debrid',
-            'episode_re': episode,
-            'size': source_utils.get_size(os.path.getsize(full_path)),
-            'seeders': 0,
-            'byte_size': os.path.getsize(full_path),
-            'info': source_utils.getInfo(f),
-            'lang': source_utils.getAudio_lang(f),
-            'channel': source_utils.getAudio_channel(f),
-            'sub': source_utils.getSubtitle_lang(f)
-        }
-        return source
+        for file_info in match_files:
+            filename = re.sub(r'\[.*?]', '', file_info['name']).lower()
+
+            if not source_utils.is_file_ext_valid(filename):
+                continue
+
+            full_path = file_info['path']
+            file_size = os.path.getsize(full_path)
+
+            self.local_files.append(
+                {
+                    'release_title': file_info['name'],
+                    'hash': full_path,
+                    'provider': 'Local',
+                    'type': 'local',
+                    'quality': source_utils.getQuality(file_info['name']),
+                    'debrid_provider': 'Local-Debrid',
+                    'episode': episode,
+                    'size': source_utils.get_size(file_size),
+                    'seeders': 0,
+                    'byte_size': file_size,
+                    'info': source_utils.getInfo(file_info['name']),
+                    'lang': source_utils.getAudio_lang(file_info['name']),
+                    'channel': source_utils.getAudio_channel(file_info['name']),
+                    'sub': source_utils.getSubtitle_lang(file_info['name'])
+                }
+            )
+        return self.local_files
