@@ -257,7 +257,7 @@ def filter_sources(provider, list_, season, episode, anidb_id=None, part=None):
     regex_season = r"(?i)\b(?:s(?:eason)?[ ._-]?(\d{1,2}))(?=\D|$)"
     rex_season = re.compile(regex_season)
 
-    regex_ep = r"(?i)(?:s(?:eason)?\s?\d{1,2})?[ ._-]?(?:e(?:p)?\s?(\d{1,4})(?:v\d+)?(?:[ ._-]?[-~][ ._-]?e?(?:p)?\s?(\d{1,4}))?)"
+    regex_ep = r"(?i)(?:s(?:eason)?\s?\d{1,2})?[ ._-]?(?:e(?:p)?\s?(\d{1,4})(?:v\d+)?)?(?:[ ._-]?[-~][ ._-]?e?(?:p)?\s?(\d{1,4}))?|(?:-\s?(\d{1,4})\b)"
     rex_ep = re.compile(regex_ep)
 
     if part:
@@ -275,9 +275,24 @@ def filter_sources(provider, list_, season, episode, anidb_id=None, part=None):
                 continue
         elif provider == 'nyaa':
             torrent['hash'] = re.findall(r'btih:(.*?)(?:&|$)', torrent['magnet'])[0]
+        elif provider == 'realdebrid':
+            torrent['hash'] = torrent.get('hash', '')
+        elif provider == 'alldebrid':
+            link = torrent['link']
+            torrent['hash'] = re.search(r'/f/([^/]+)', link).group(1)
+        elif provider == 'premiumize':
+            torrent['hash'] = torrent.get('id', '')
+        elif provider == 'torbox':
+            torrent['hash'] = torrent.get('hash', '')
+        elif provider == 'local':
+            torrent['hash'] = torrent.get('path', '')
         else:
             continue
-        title = torrent['name'].lower()
+
+        if provider in ['realdebrid', 'alldebrid']:
+            title = torrent['filename'].lower()
+        else:
+            title = torrent['name'].lower()
 
         # filter parts
         if rex_part and 'part' in title:
@@ -292,12 +307,12 @@ def filter_sources(provider, list_, season, episode, anidb_id=None, part=None):
         ep_match = list(map(int, list(filter(None, itertools.chain(*ep_match)))))
 
         if not ep_match:
-            regex_batch = r"(?i)\b(batch|complete|season\s*\d+\b|s\d{1,2}\s*(?:-\s*\d{2,})?(?=\s*\[?\d{2,}])|\d{2,}\s*episodes?)\b"
+            regex_batch = r"(?i)\b(batch|complete|season\s*\d+\b|s\d{1,2}(?:\s*-\s*\d{2,})?(?:\s*\[?\d{2,}])?|\d{2,}\s*episodes?)\b"
             batch_math = re.search(regex_batch, title)
             if not batch_math:
                 continue
-        elif ep_match and ep_match[0] != episode:
-            if not (len(ep_match) > 1 and ep_match[0] <= episode <= ep_match[1]):
+        elif ep_match and ep_match[0] != int(episode):
+            if not (len(ep_match) > 1 and ep_match[0] <= int(episode) <= ep_match[1]):
                 continue
 
         # filter season
@@ -311,6 +326,7 @@ def filter_sources(provider, list_, season, episode, anidb_id=None, part=None):
                     filtered_list.append(torrent)
             else:
                 filtered_list.append(torrent)
+
         # control.log(f'{season_match=}\t| {ep_match=}\t| {bool(batch_math)=}')
         # control.log(title)
 
