@@ -8,9 +8,10 @@ Please note that this version is still in development, so you may encounter a fe
 
 New in this version:
 
+    - Every Debrid and Cloud Service are now Fixed thanks to @joezito129 and @adamosborne83
+    - Flitering has been improved significantly to help with scrapping
     - MyAnimeList (MAL) menus (AniList menus are still available)
     - New sorting system for more precise control over your content
-    - Improved scraping for more accurate data
     - Reuse Language Invoker support for faster, more efficient performance
     - New menu settings for more customization
 
@@ -23,3 +24,5 @@ Some of these will be added in future updates as we continue to improve the addo
 You might also notice some anime missing; this is because we're primarily using MAL IDs to streamline episode metadata, ensuring fewer issues for users.
 
 A huge thank you to the entire Otaku development team and everyone who contributed to this release! Special shoutout to Joezito129, who led the recode and added many of these awesome features. We couldn’t have done it without the team's hard work and dedication!
+
+Another huge thank you to @adamosborne83 for letting me use his Real-Debrid and AllDebrid Account!
